# fine-tune-lab

./: CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: architecture.md  orchestration.md
docs/adr/: 0001-stack-and-scope.md
docs/context/: handoff.md
docs/contracts/: README.md  classification_io.md  dataset.md
docs/modules/: data.md  distill.md  eval.md  serve.md  train.md
notebooks/: colab_lora.ipynb  kaggle_qlora.ipynb
src/fine_tune_lab/: __init__.py
src/fine_tune_lab/data/: __init__.py  build_dataset.py  schema.py
src/fine_tune_lab/distill/: __init__.py  config.py  distill.py
src/fine_tune_lab/eval/: __init__.py  cost.py  metrics.py  report.py
src/fine_tune_lab/serve/: __init__.py  io.py  vllm_server.py
src/fine_tune_lab/train/: __init__.py  config.py  lora.py
tests/: test_data.py  test_eval.py  test_serve_io.py  test_smoke.py  test_train.py
